--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,8 @@ services:
       - /build/node_modules
     networks:
       - Code-Sync
+    environment:
+      - VITE_BACKEND_URL=http://server:3000
     ports:
       - "5173:5173"
     depends_on:
